Fix responsiveness issue on iPhones (about section not loading correctly)

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,6 @@ body {
 /* About */
 
 .about h1, h2, h3, h4, h5, h6 {
-
   color: white;
   font-size: 22px
   margin-bottom: 12px;
@@ -85,8 +84,11 @@ body {
 
 .about {
    background: #2B2B2B;
-   padding-top: 96px;
-   padding-bottom: 66px;
+   padding-top: 60px;
+   padding-right: 30px;
+   padding-left: 30px;
+   padding-bottom: 30px;
+   min-height: 50vh;
    overflow: hidden;
 }
 
